--- a/ML-Action/11-transformer.ipynb
+++ b/ML-Action/11-transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "terminal-riding",
    "metadata": {},
    "outputs": [
@@ -11,13 +11,11 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.19.2\n",
-      "pandas:      1.2.2\n",
-      "matplotlib:  3.3.4\n",
-      "sklearn:     0.23.2\n",
-      "seaborn:     0.11.1\n",
-      "plotly:      4.14.3\n",
-      "PyTorch:      1.2.0+cpu\n"
+      "numpy:       1.21.2\n",
+      "pandas:      1.3.4\n",
+      "matplotlib:  3.5.1\n",
+      "sklearn:     1.0.2\n",
+      "PyTorch:      1.2.0\n"
      ]
     }
    ],
@@ -25,12 +23,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import plotly.express as px\n",
-    "from plotly import graph_objects as go\n",
     "\n",
     "import matplotlib\n",
-    "import plotly\n",
     "import sklearn\n",
     "import torch\n",
     "\n",
@@ -44,8 +38,6 @@
     "print(\"pandas:     \", pd.__version__)\n",
     "print(\"matplotlib: \", matplotlib.__version__)\n",
     "print(\"sklearn:    \", sklearn.__version__)\n",
-    "print(\"seaborn:    \", sns.__version__)\n",
-    "print(\"plotly:     \", plotly.__version__)\n",
     "print(\"PyTorch:     \", torch.__version__)"
    ]
   },
@@ -56,7 +48,20 @@
    "source": [
     "# Pytorch-Transformer\n",
     "\n",
-    "这里介绍了Pytorch里 transformer 层的实现模块."
+    "参考文档:\n",
+    "+ [Pytorch tutorial -> Transformer tutorial](https://pytorch.org/tutorials/beginner/transformer_tutorial.html)\n",
+    "+ [Pytorch -> Transformer Layers](https://pytorch.org/docs/stable/nn.html#transformer-layers)\n",
+    "\n",
+    "这里介绍了Pytorch里 transformer 层的实现模块.\n",
+    "\n",
+    "主要有如下几个类：\n",
+    "+ `nn.Transformer`：一步到位构建整个Transformer模型，底层使用的是下面的API\n",
+    "+ `nn.TransformerEncoder`：Encoder层，包含了多个 `TransoformerEncoderLayer`\n",
+    "+ `nn.TransformerDecoder`：Decoder层，包含了多个 `TransformerDecoderLayer`\n",
+    "+ `nn.TransformerEncoderLayer`：单层Encoder\n",
+    "+ `nn.TransformerDecoderLayer`：单层Decoder\n",
+    "\n",
+    "但是需要注意的是，上述各种层的**底部都是调用的`activation.py`中的`MultiheadAttention`类**。"
    ]
   },
   {
@@ -66,17 +71,19 @@
    "source": [
     "## MultiheadAttention Layer\n",
     "\n",
+    "它是`TransformerEncoderLayer`和`TransformerDecoderLayer`层中 **self-attention 层**的实现。  \n",
     "需要注意的是，pytorch源码中 `MultiheadAttention` 被放在了 Non-linear Activations 这一类中（并且是放在`activation.py`文件中的）。\n",
     "\n",
-    "`MultiheadAttention(embed_dim, num_heads, dropout=0.0, bias=True, add_bias_kv=False, add_zero_attn=False, kdim=None, vdim=None)`\n",
+    "`MultiheadAttention(embed_dim, num_heads, dropout=0.0, bias=True, add_bias_kv=False, add_zero_attn=False, kdim=None, vdim=None)`   \n",
+    "[官方文档](https://pytorch.org/docs/stable/generated/torch.nn.MultiheadAttention.html#torch.nn.MultiheadAttention).\n",
     "+ 参数\n",
-    "  + `embed_dim`，这个是所有head的总维度，分配到每个head的维度还需要除以下面的 num_heads.\n",
-    "  + `num_heads`，\n",
+    "  + `embed_dim`，self-attention层的输入/输出特征维度——**输入和输出的维度都是一样的**\n",
+    "  + `num_heads`，head数量，注意，分配到每个head的维度 = embed_dim/num_heads.\n",
+    "  + `kdim`，自定义 key 中的特征维度\n",
+    "  + `vidm`，自定义 value 中的特征维度\n",
     "  + `bias`，\n",
     "  + `add_bias_kv`\n",
     "  + `add_zero_attn`\n",
-    "  + `kdim`，自定义 key 中的特征维度\n",
-    "  + `vidm`，自定义 value 中的特征维度\n",
     "\n",
     "\n",
     "+ `forward(query, key, value, key_padding_mask=None, need_weights=True, attn_mask=None)`\n",
@@ -85,12 +92,14 @@
     "    + `key.shape` = $(S, N, E)$\n",
     "    + `value.shape` = $(S, N, E)$\n",
     "  \n",
-    "  其中 $N$ 是batch size，$E$ 是 embedding 维度——**它必须等于参数中的`embed_dim`**，这个embedding 维度，既是输入的，也是输入的——**self-attention层输入和输入的特征维度必须一样**  ；  \n",
+    "  其中 $N$ 是batch size，$E$ 是 embedding 维度——**它必须等于参数中的`embed_dim`**，这个embedding 维度，既是输入的，也是输出的——**self-attention层输入和输入的特征维度必须一样**  ；  \n",
     "  $S$ 是**输入**序列的长度，$L$ 是**输出**序列的长度——**输入和输出序列的长度可以不一样**.\n",
     "  \n",
     "  + `key_padding_mask`，\n",
     "  + `need_weights`，bool，表示是否需要输出attention的weights\n",
     "  + `attn_mask`，2维或者3维的mask\n",
+    "\n",
+    "注意，上述的输入中，各个维度顺序必须为(序列长度，batch_size, embedding_dimension)，在之后的版本中，提供了一个\n",
     "\n",
     "\n",
     "+ `forward()`方法返回值\n",
@@ -100,12 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "permanent-vietnamese",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 这个 embed_dim 指定的既是输入序列中，每个word的特征维度，也指定了输入序列中，每个word的特征维度\n",
+    "# 这个 embed_dim 指定的既是输入序列中，每个word的特征维度，也指定了输出序列中，每个word的特征维度\n",
     "embed_dim = 512\n",
     "num_heads = 8\n",
     "multihead_attn = nn.MultiheadAttention(embed_dim, num_heads)"
@@ -148,16 +157,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "private-affair",
-   "metadata": {},
+   "id": "37c975d9-a8ce-4564-be5a-d8f263baa926",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Encoder Layer\n",
     "\n",
-    "单层Encoder：`nn.TransformerEncoderLayer(d_model, nhead, dim_feedforward=2048, dropout=0.1, activation='relu')`\n",
+    "### 单层Encoder\n",
+    "\n",
+    "`nn.TransformerEncoderLayer(d_model, nhead, dim_feedforward=2048, dropout=0.1, activation='relu')`  \n",
+    "[官方文档](https://pytorch.org/docs/stable/generated/torch.nn.TransformerEncoderLayer.html#torch.nn.TransformerEncoderLayer)，它内部包含了一个 self-attention 层 + 一个 feedforward 层.\n",
+    "\n",
     "+ 参数\n",
     "  + `d_model`，输入序列中，每个word的特征个数——它同时也决定了输出序列里每个word的特征个数\n",
     "  + `nhead`，multiheadattention中的head个数\n",
     "  + `dim_feedforward`，这个维度设置的是前馈神经网络的节点个数，前馈神经网络的输出节点数还是 `d_model`\n",
+    "  + `dropout`，dropout比例，默认 0.1\n",
+    "  + \n",
     "  \n",
     "  \n",
     "+ `forward(src, src_mask=None, src_key_padding_mask=None)`方法\n",
@@ -168,14 +185,19 @@
     "  \n",
     "+ `forward()`方法返回值  \n",
     "  它返回的是和 `src` shape 相同的 tensor.\n",
-    "  \n",
-    "+ Encoder的内部只有**一层**`MultiheadAttention`：`Encoder.forward()`实际执行时，调用方式为`MultiheadAttention.forward(src, src, src)`——`src`会同时作为 query, key, value 传入 self-attention。\n",
     "\n",
-    "多层Encoder：`TransformerEncoder(encoder_layer, num_layers, norm=None)`\n",
+    "\n",
+    "Encoder的内部只有**一层**`MultiheadAttention`：`Encoder.forward()`实际执行时，调用方式为`MultiheadAttention.forward(src, src, src)`——`src`会同时作为 query, key, value 传入 self-attention。\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 多层Encoder\n",
+    "\n",
+    "`TransformerEncoder(encoder_layer, num_layers, norm=None)`\n",
     "+ 参数：\n",
-    "  + `encoder_layer`，是一个`TransformerEncoderLayer`类的示例\n",
+    "  + `encoder_layer`，是一个`TransformerEncoderLayer`类的实例对象\n",
     "  + `num_layers`，指定堆叠的 Encoder 层数\n",
-    "+ `forward()`方法就和`TransformerEncoderLayer`的一致\n"
+    "+ `forward()`方法和`TransformerEncoderLayer`的一致"
    ]
   },
   {
@@ -211,12 +233,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "executed-intelligence",
+   "id": "11be2b79-8ce5-439d-88ba-f2837babc56f",
    "metadata": {},
    "source": [
     "## Decoder Layer\n",
     "\n",
-    "单层Decoder：`TransformerDecoderLayer(d_model, nhead, dim_feedforward=2048, dropout=0.1, activation='relu')`\n",
+    "### 单层Decoder\n",
+    "\n",
+    "`TransformerDecoderLayer(d_model, nhead, dim_feedforward=2048, dropout=0.1, activation='relu')`   \n",
+    "[官方文档](https://pytorch.org/docs/stable/generated/torch.nn.TransformerDecoderLayer.html#torch.nn.TransformerDecoderLayer)\n",
     "\n",
     "+ 参数：\n",
     "  和 Encoder 一致\n",
@@ -229,16 +254,22 @@
     "  + `memory_mask`\n",
     "  + `tgt_key_padding_mask`\n",
     "  + `memory_key_padding_mask`\n",
-    "  \n",
+    "\n",
     "\n",
     "+ `forward()`方法返回值  \n",
     "  它返回的是和 `tgt` shape 相同的 tensor.\n",
     "\n",
-    "+ `Decoder`内部有两层`MultiheadAttention`：\n",
+    "\n",
+    "`Decoder`内部有两层`MultiheadAttention`：\n",
     "  + 第一层调用时为`MultiheadAttention.forward(tgt, tgt, tgt)`\n",
-    "  + 第二层调用时为`MultiheadAttention.forward(tgt, memory, memory)`。\n",
-    "  \n",
-    "多层Decoder：`TransformerDecoder(decoder_layer, num_layers, norm=None)`\n"
+    "  + 第二层调用时为`MultiheadAttention.forward(tgt, memory, memory)`\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 多层Decoder\n",
+    "\n",
+    "`TransformerDecoder(decoder_layer, num_layers, norm=None)`   \n",
+    "参数同 `TransformerEncoder` 类."
    ]
   },
   {
@@ -290,15 +321,18 @@
     "transformer 包里最重要的三个子模块是：\n",
     "1. [Configuration](https://huggingface.co/transformers/main_classes/configuration.html)  \n",
     "基础的类是 `PretrainedConfig`（好像也只有这一个类），用于 **导出/导入** 模型的配置。\n",
+    "\n",
     "2. [Tokenizer](https://huggingface.co/transformers/main_classes/tokenizer.html)  \n",
     "包含两个基础的类，用于将文本特征转换成transformer能处理的序列特征：\n",
-    "  + `PreTrainedTokenizer`，这个比较慢\n",
-    "  + `PreTrainedTokenizerFast`，这个比较快\n",
+    "   + `PreTrainedTokenizer`，这个比较慢\n",
+    "   + `PreTrainedTokenizerFast`，这个比较快\n",
+    "\n",
+    "\n",
     "3. [Models](https://huggingface.co/transformers/main_classes/model.html)  \n",
     "基础的类有如下三个，用于构建模型：\n",
-    "  + `PreTrainedModel`，pytorch的模型都继承了这个类，继承了 `torch.nn.Module` 类.\n",
-    "  + `TFPreTrainedModel`，Tensorflow2.0里的模型都继承了这个类，继承了 `tf.keras.Model` 类.\n",
-    "  + `FlaxPreTrainedModel`\n",
+    "   + `PreTrainedModel`，pytorch的模型都继承了这个类，继承了 `torch.nn.Module` 类.\n",
+    "   + `TFPreTrainedModel`，Tensorflow2.0里的模型都继承了这个类，继承了 `tf.keras.Model` 类.\n",
+    "   + `FlaxPreTrainedModel`\n",
     "\n",
     "  \n",
     "上面这三个基础模块，都有如下两个方法用于**导入/导出**对应的配置：\n",
@@ -321,11 +355,11 @@
     "\n",
     "\n",
     "transformer源码中，所有的模型结构都存放在 `src/transformers/models`文件夹下，每个模型对应于一个文件夹（比如BERT对应的就是`bert`文件夹），每个模型的文件夹内，主要有如下几个`.py`文件，其中的 `xxx` 是对应模型的名称：\n",
-    "+ **`configuration_xxx.py`**，编写了该模型对应的`PretrainedConfig`子类，比如BERT就是`BertConfig`。\n",
-    "+ **`modeling_xxx.py`**，存放了pytorch编写的模型结构，要用到的模型类都放在这里面\n",
+    "+ **`configuration_xxx.py`——KEY**，编写了该模型对应的`PretrainedConfig`子类，比如BERT就是`BertConfig`。\n",
+    "+ **`modeling_xxx.py`——KEY**，存放了pytorch编写的模型结构，要用到的模型类都放在这里面\n",
     "+ `modeling_tf_xxx.py`，存放tensorflow编写的模型结构\n",
     "+ `modeling_flax_xxx.py`\n",
-    "+ **`tokenization_xxx.py`**，用于 分词的 实现类，比如BERT就是`BertTokenizer`类\n",
+    "+ **`tokenization_xxx.py`——KEY**，用于 分词的 实现类，比如BERT就是`BertTokenizer`类\n",
     "+ `tokenization_xxx_fast.py`，快速分词的实现类\n",
     "+ `convert_*.py`，用于将其它配置文件转换成对应的模型。"
    ]
@@ -1181,9 +1215,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Tensorflow(Python3.7.11)",
    "language": "python",
-   "name": "python3"
+   "name": "tensorflow"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1195,7 +1229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
