--- a/ML-Action/06-pytorch-tutorial.ipynb
+++ b/ML-Action/06-pytorch-tutorial.ipynb
@@ -1145,7 +1145,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## element-wise函数的求导\n",
     "\n",
@@ -4676,9 +4678,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow1.15",
+   "display_name": "Tensorflow(Python3.7.11)",
    "language": "python",
-   "name": "tensorflow1.15"
+   "name": "tensorflow"
   },
   "language_info": {
    "codemirror_mode": {
