--- a/ML-Action/11-transformer.ipynb
+++ b/ML-Action/11-transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "terminal-riding",
    "metadata": {},
    "outputs": [
@@ -69,75 +69,118 @@
    "id": "mechanical-agenda",
    "metadata": {},
    "source": [
-    "## MultiheadAttention Layer\n",
+    "## Multi-Head Attention Layer\n",
+    "\n",
+    "[官方文档](https://pytorch.org/docs/stable/generated/torch.nn.MultiheadAttention.html#torch.nn.MultiheadAttention).\n",
     "\n",
     "它是`TransformerEncoderLayer`和`TransformerDecoderLayer`层中 **self-attention 层**的实现。  \n",
     "需要注意的是，pytorch源码中 `MultiheadAttention` 被放在了 Non-linear Activations 这一类中（并且是放在`activation.py`文件中的）。\n",
     "\n",
-    "`MultiheadAttention(embed_dim, num_heads, dropout=0.0, bias=True, add_bias_kv=False, add_zero_attn=False, kdim=None, vdim=None)`   \n",
-    "[官方文档](https://pytorch.org/docs/stable/generated/torch.nn.MultiheadAttention.html#torch.nn.MultiheadAttention).\n",
-    "+ 参数\n",
-    "  + `embed_dim`，self-attention层的输入/输出特征维度——**输入和输出的维度都是一样的**\n",
-    "  + `num_heads`，head数量，注意，分配到每个head的维度 = embed_dim/num_heads.\n",
-    "  + `kdim`，自定义 key 中的特征维度\n",
-    "  + `vidm`，自定义 value 中的特征维度\n",
-    "  + `bias`，\n",
-    "  + `add_bias_kv`\n",
-    "  + `add_zero_attn`\n",
+    "\n",
+    "### 实例化参数\n",
+    "`MultiheadAttention(embed_dim, num_heads, dropout=0.0, bias=True, add_bias_kv=False, add_zero_attn=False, kdim=None, vdim=None)`  \n",
+    "+ `embed_dim`，整个MHA的输入/输出特征维度。**原始论文里，MHA的输入/输出特征维度可以是不一样的，但是在Pytorch的实现里，强制要求它们是一样的**。\n",
+    "+ `num_heads`，head数量，注意，分配到每个head的维度 = embed_dim/num_heads.\n",
+    "+ `kdim`，自定义 key 中的特征维度，它是下面`forward()`方法里`key`对应的特征维度，默认下=`embed_dim`\n",
+    "+ `vidm`，自定义 value 中的特征维度，`forward()`方法里`value`对应的特征维度，默认=`embed_dim`\n",
+    "+ `bias`，\n",
+    "+ `add_bias_kv`\n",
+    "+ `add_zero_attn`\n",
+    "+ `batch_first`，早期版本的pytorch中，会要求下面`forward()`方法里输入数据的各个维度顺序必须为：`(序列长度，batch_size, embedding_dimension)`，后来提供了这个`batch_first`参数，用于适应一下输入数据的维度变化.\n",
     "\n",
     "\n",
-    "+ `forward(query, key, value, key_padding_mask=None, need_weights=True, attn_mask=None)`\n",
-    "  + `query`, `key`, `value`，self-attention的三个输入向量——这三个输入向量会被用于生成对应的Q,K,V\n",
-    "    + `query.shape` = $(L, N, E)$，\n",
-    "    + `key.shape` = $(S, N, E)$\n",
-    "    + `value.shape` = $(S, N, E)$\n",
-    "  \n",
-    "  其中 $N$ 是batch size，$E$ 是 embedding 维度——**它必须等于参数中的`embed_dim`**，这个embedding 维度，既是输入的，也是输出的——**self-attention层输入和输入的特征维度必须一样**  ；  \n",
-    "  $S$ 是**输入**序列的长度，$L$ 是**输出**序列的长度——**输入和输出序列的长度可以不一样**.\n",
-    "  \n",
-    "  + `key_padding_mask`，\n",
-    "  + `need_weights`，bool，表示是否需要输出attention的weights\n",
-    "  + `attn_mask`，2维或者3维的mask\n",
+    "### 前向传播\n",
     "\n",
-    "注意，上述的输入中，各个维度顺序必须为(序列长度，batch_size, embedding_dimension)，在之后的版本中，提供了一个\n",
+    "`MultiheadAttention.forward(query, key, value, key_padding_mask=None, need_weights=True, attn_mask=None)`\n",
+    "+ `query`, `key`, `value`，MHA的三个输入矩阵——这三个输入向量会被用于生成对应的Q,K,V\n",
+    "  + `query.shape` = $(L, N, E)$，`key.shape` = $(S, N, E)$，`value.shape` = $(S, N, E)$.   \n",
+    "  其中 $N$ 是 batch size，$E$ 是 embedding 维度——**它必须等于实例化参数中的`embed_dim`**； $L$ 是**target**序列的长度——因为它决定了MHA输出的序列长度，$S$ 是**source**序列的长度。\n",
+    "  + Transformer中MHA会**在3个地方使用，这3个地方会影响query,key,value的内容**\n",
+    "    1. Encoder中，query,key,value都是来自于**样本的输入序列**，此时 $L=S$，`kdim == vdim`\n",
+    "    2. Decoder的 **Masked MHA** 中，query,key,value都来自于**样本的输出序列**，此时 $L=S$, `kdim == vdim`\n",
+    "    3. Decoder的 **decoder-encoder attention**中，query来自于**样本的输出序列**，key,value都是Encoder的输出，此时可能 $L\\neq S$, `kdim != vdim`\n",
+    "\n",
+    "\n",
+    "+ `key_padding_mask`：填充位置的掩码，shape=$(N, S)$   \n",
+    "  + 对于一个batch的训练数据来说，batch size 为 $N$ 表示有 $N$ 个序列，但是**每个序列的长度（也就是单词个数）是不一样的**，`key`,`value`中的 $S$ 都是指最长序列的长度，其他的序列就需要对缺少的单词位置做填充(padding)，padding位置的词通常使用全为0的embeding 来表示。   \n",
+    "  + 为了不让MHA对这些位置的词产生注意力，需要记录这些padding位置，每个batch都使用这样一个 $(N, S)$的矩阵来标识padding的位置，该矩阵的每一行对应batch中的一个序列，值为`[False, False, True, True]` 或者 `[0, 0, 1, 1]` 的形式，其中结尾`True`或者1标识的就是padding的位置。   \n",
+    "  + 需要注意的是，这里padding矩阵实际生效位置是在`query`和`key`做完矩阵乘法得到shape=$(N,L,S)$的中间矩阵 P 之后才使用的，由于只有`key`使用了padding掩码，只需要在$N$个序列中对$S$这一个维度标识padding位置即可，所以使用的padding矩阵shape=$(N,S)$. pytorch中的实现就是对中间矩阵 P 的$S$维度，按照 `[False,False,True,True]` 中的标记，对于`True`的位置赋值为`-inf`，从而在后续的softmax中，该位置得到的概率为0.\n",
+    "\n",
+    "\n",
+    "+ `attn_mask`，shape=$(N,L,S)$，**只在Decoder中使用**，主要是解码时不让当前位置的词和后面要预测的词序列进行Attention.   \n",
+    "  + 它的生效位置也是在`query`和`key`相乘得到shape=$(N,L,S)$的中间矩阵 P 之后使用，此时batch中**每个**序列的输入`query`部分（shape=$(L,E)$）和`key`部分（shape=$(S,E)$）相乘得到了一个 $(L,S)$ 的矩阵 P，矩阵中列表示`query`里的每个词，行表示`key`中的每个词，如果不想让`query`中第 $i$ 个词看到`key`中第 $j$ 个词之后的内容，只需要让 `P[i, j:]` 这部分为 `-inf` 即可，因此这个掩码的shape=$(N,L,S)$.\n",
+    "  + 如果是在Decoder中的**Masked MHA**这里使用，此时输入的`query`,`key`,`value`都是来源于同一个地方，`query`和`key`维度相等，此时 P 是一个方阵，并且右上三角均为`-inf` —— 这是好理解的部分，也是正常它要解决的问题部分。\n",
+    "  + 如果是在Decoder中的**encoder-decoder attention**层使用，此时输入的`query`是来自于之前的Masked MHA层，属于输出序列的内容，但是`key`,`value`是来自于Encoder，属于输入序列的内容，此时才会出现`query`和`key`长度不等的情况——这种情况下虽然也可以使用掩码，但是它的含义就不那么好解释了。\n",
+    "\n",
+    "\n",
+    "+ `need_weights`，bool，表示是否需要输出attention的weights\n",
     "\n",
     "\n",
     "+ `forward()`方法返回值\n",
     "  + `attn_output`，shape= $(L, N, E)$，$L$ 由 输入的`query`序列长度决定，$E$ 由输入序列中每个word的特征维度确定\n",
-    "  + `attn_output_weights`，shape=$(N, L, S)$，这个权重应该是每个输入序列中，每个word的attention权重."
+    "  + `attn_output_weights`，shape=$(N, L, S)$，这个权重应该是每个输入序列中，每个word的attention权重.\n",
+    "  \n",
+    "### 一些说明\n",
+    "\n",
+    "Pytorch中的Multi-Head Attention的实现和论文《All you need is transformer》中有一些不一样的地方，总结如下：\n",
+    "\n",
+    "+ pytorch在实现MHA时，强制要求了输入的特征维度和输出的特征维度必须一致，也就是实例化时的`embed_dim`参数，但是在原论文中没有这个限制。   \n",
+    "原论文中，输入的特征维度是`query`里的embed_dim，输出的特征维度由`value`的embed_dim决定。\n",
+    "\n",
+    "+ pytorch中MHA实例化参数`kdim`,`vdim`和含义和原论文里的$d_k$, $d_v$不一样，如下所示.   \n",
+    "原论文中的$d_k$, $d_v$ 指的是query,key经过参数矩阵$W$变换之后的embed_dim，而pytoch中的`kdim`,`vdim`指定的是输入的`key`,`value`中，没有经过$W$变换之前的特征维度，对于经过$W$变换之后的embed_dim，pytorch强制规定了都必须为实例化参数时的`embed_dim`。\n",
+    "\n",
+    "<img src=\"images/multi-head-attention-formula.png\" width=\"60%\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47016bd0-03db-4a30-8d43-d93f1fa1ff6e",
+   "metadata": {},
+   "source": [
+    "### 使用示例"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "permanent-vietnamese",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 这个 embed_dim 指定的既是输入序列中，每个word的特征维度，也指定了输出序列中，每个word的特征维度\n",
-    "embed_dim = 512\n",
-    "num_heads = 8\n",
-    "multihead_attn = nn.MultiheadAttention(embed_dim, num_heads)"
+    "embed_dim, num_heads = 512, 8\n",
+    "batch_size, target_len, source_len = 5, 10, 20\n",
+    "\n",
+    "query = torch.rand(target_len, batch_size, embed_dim)\n",
+    "key = torch.rand(source_len, batch_size, embed_dim)\n",
+    "value = torch.rand(source_len, batch_size, embed_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "sunrise-springer",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 5, 512])\n",
+      "torch.Size([5, 10, 20])\n"
+     ]
+    }
+   ],
+   "source": [
+    "multihead_attn = nn.MultiheadAttention(embed_dim, num_heads)\n",
+    "attn_output, attn_output_weights = multihead_attn(query, key, value)\n",
+    "print(attn_output.shape)\n",
+    "print(attn_output_weights.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sunrise-springer",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "E, S, L, N = embed_dim, 20, 10, 5\n",
-    "query = torch.rand(L, N, E)\n",
-    "key = torch.rand(S, N, E)\n",
-    "value = torch.rand(S, N, E)\n",
-    "\n",
-    "attn_output, attn_output_weights = multihead_attn(query, key, value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "civilian-dubai",
    "metadata": {},
    "outputs": [
@@ -151,6 +194,13 @@
     }
    ],
    "source": [
+    "kdim, vdim = 256, 256\n",
+    "key = torch.rand(source_len, batch_size, kdim)\n",
+    "value = torch.rand(source_len, batch_size, vdim)\n",
+    "\n",
+    "multihead_attn = nn.MultiheadAttention(embed_dim, num_heads, kdim=kdim, vdim=vdim)\n",
+    "attn_output, attn_output_weights = multihead_attn(query, key, value)\n",
+    "\n",
     "print(attn_output.shape)\n",
     "print(attn_output_weights.shape)"
    ]
@@ -166,21 +216,21 @@
     "\n",
     "### 单层Encoder\n",
     "\n",
-    "`nn.TransformerEncoderLayer(d_model, nhead, dim_feedforward=2048, dropout=0.1, activation='relu')`  \n",
     "[官方文档](https://pytorch.org/docs/stable/generated/torch.nn.TransformerEncoderLayer.html#torch.nn.TransformerEncoderLayer)，它内部包含了一个 self-attention 层 + 一个 feedforward 层.\n",
     "\n",
-    "+ 参数\n",
+    "`nn.TransformerEncoderLayer(d_model, nhead, dim_feedforward=2048, dropout=0.1, activation='relu')`  \n",
+    "\n",
+    "+ 实例化参数\n",
     "  + `d_model`，输入序列中，每个word的特征个数——它同时也决定了输出序列里每个word的特征个数\n",
     "  + `nhead`，multiheadattention中的head个数\n",
     "  + `dim_feedforward`，这个维度设置的是前馈神经网络的节点个数，前馈神经网络的输出节点数还是 `d_model`\n",
     "  + `dropout`，dropout比例，默认 0.1\n",
-    "  + \n",
+    "\n",
     "  \n",
-    "  \n",
-    "+ `forward(src, src_mask=None, src_key_padding_mask=None)`方法\n",
+    "+ 前向传播`forward(src, src_mask=None, src_key_padding_mask=None)`\n",
     "  + `src`，输入的sequence, `shape` = $(S, N, E)$\n",
     "  + `src_mask`，输入sequence的mask\n",
-    "  + `src_key_padding_mask`，每个batch中src的padding\n",
+    "  + `src_key_padding_mask`，每个batch中src的padding矩阵\n",
     "  \n",
     "  \n",
     "+ `forward()`方法返回值  \n",
@@ -202,8 +252,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "variable-jerusalem",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "src.shape:  torch.Size([32, 10, 512])\n",
+      "out.shape:  torch.Size([32, 10, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "d_model, num_heads, dim_ffn = 512, 8, 2048\n",
+    "batch_size, source_len = 10, 32\n",
+    "src = torch.rand(source_len, batch_size, d_model)\n",
+    "\n",
+    "encoder_layer = nn.TransformerEncoderLayer(d_model=512, nhead=8, dim_feedforward=dim_ffn)\n",
+    "out = encoder_layer(src)\n",
+    "\n",
+    "print(\"src.shape: \", src.shape)\n",
+    "print(\"out.shape: \", out.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8fed3cba-eca8-46d4-b6e5-df9ad8d636a1",
    "metadata": {},
    "outputs": [
     {
@@ -216,16 +295,8 @@
     }
    ],
    "source": [
-    "d_model = 512\n",
-    "nhead = 8\n",
-    "dim_ffn = 2048\n",
-    "batch_size = 10\n",
-    "source_seq_len = 32\n",
-    "\n",
-    "encoder_layer = nn.TransformerEncoderLayer(d_model=512, nhead=8, dim_feedforward=dim_ffn)\n",
-    "\n",
-    "src = torch.rand(source_seq_len, batch_size , d_model)\n",
-    "out = encoder_layer(src)\n",
+    "multi_encoder_layer = nn.TransformerEncoder(encoder_layer=encoder_layer, num_layers=3)\n",
+    "out = multi_encoder_layer(src)\n",
     "\n",
     "print(\"src.shape: \", src.shape)\n",
     "print(\"out.shape: \", out.shape)"
@@ -240,30 +311,33 @@
     "\n",
     "### 单层Decoder\n",
     "\n",
-    "`TransformerDecoderLayer(d_model, nhead, dim_feedforward=2048, dropout=0.1, activation='relu')`   \n",
     "[官方文档](https://pytorch.org/docs/stable/generated/torch.nn.TransformerDecoderLayer.html#torch.nn.TransformerDecoderLayer)\n",
     "\n",
-    "+ 参数：\n",
-    "  和 Encoder 一致\n",
+    "`TransformerDecoderLayer(d_model, nhead, dim_feedforward=2048, dropout=0.1, activation='relu')`   \n",
     "\n",
-    "+ `forward(tgt, memory, tgt_mask=None, memory_mask=None, tgt_key_padding_mask=None, memory_key_padding_mask=None)`  \n",
-    "  这个方法和 Encoder 不一致，它多了一个 memory.\n",
+    "+ 实例化参数：和 Encoder 一致\n",
+    "  + `d_model`，输入序列中，每个word的特征个数——它同时也决定了输出序列里每个word的特征个数\n",
+    "  + `nhead`，multiheadattention中的head个数\n",
+    "  + `dim_feedforward`，这个维度设置的是前馈神经网络的节点个数，前馈神经网络的输出节点数还是 `d_model`\n",
+    "  + `dropout`，dropout比例，默认 0.1\n",
+    "\n",
+    "\n",
+    "+ 前向传播`forward(tgt, memory, tgt_mask=None, memory_mask=None, tgt_key_padding_mask=None, memory_key_padding_mask=None)`  \n",
+    "  这个方法和 Encoder 不一样，它多了一个 memory. \n",
     "  + `tgt`，输入的序列，`shape`= $(S, N, E)$，\n",
     "  + `memory`，来自 encoder 层（通常是最后一层）的输出, `shape`=$(S, N, E)$.\n",
-    "  + `tgt_mask`\n",
+    "  + `tgt_mask`，\n",
     "  + `memory_mask`\n",
-    "  + `tgt_key_padding_mask`\n",
+    "  + `tgt_key_padding_mask`，\n",
     "  + `memory_key_padding_mask`\n",
+    "\n",
+    "> `Decoder`内部会调用两层`MultiheadAttention`\n",
+    "> 1. 第一层调用时为`MultiheadAttention.forward(tgt, tgt, tgt)`\n",
+    "> 2. 第二层调用时为`MultiheadAttention.forward(tgt, memory, memory)`\n",
     "\n",
     "\n",
     "+ `forward()`方法返回值  \n",
-    "  它返回的是和 `tgt` shape 相同的 tensor.\n",
-    "\n",
-    "\n",
-    "`Decoder`内部有两层`MultiheadAttention`：\n",
-    "  + 第一层调用时为`MultiheadAttention.forward(tgt, tgt, tgt)`\n",
-    "  + 第二层调用时为`MultiheadAttention.forward(tgt, memory, memory)`\n",
-    "\n",
+    "它返回的是和 `tgt` shape 相同的 tensor，\n",
     "\n",
     "\n",
     "### 多层Decoder\n",
@@ -274,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "coated-teacher",
    "metadata": {},
    "outputs": [
@@ -289,23 +363,82 @@
     }
    ],
    "source": [
-    "d_model = 512\n",
-    "nhead = 8\n",
-    "dim_ffn = 2048\n",
-    "batch_size = 10\n",
-    "source_seq_len = 32\n",
+    "d_model, nhead, dim_ffn = 512, 8, 2048\n",
+    "batch_size, source_len = 10, 32\n",
+    "tgt = torch.rand(source_len, batch_size, d_model)\n",
+    "memory = torch.rand(source_len, batch_size, d_model)\n",
     "\n",
     "decoder_layer = nn.TransformerDecoderLayer(d_model=d_model, nhead=nhead, dim_feedforward=dim_ffn)\n",
-    "\n",
-    "tgt = torch.rand(source_seq_len, batch_size, d_model)\n",
-    "memory = torch.rand(source_seq_len, batch_size, d_model)\n",
-    "\n",
     "decoder_out = decoder_layer(tgt, memory)\n",
     "\n",
     "print(\"tgt.shape: \", tgt.shape)\n",
     "print(\"memory.shape: \", memory.shape)\n",
     "print(\"decoder_out.shape: \", decoder_out.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d13f1996-8cdc-4d6d-9aa2-20ab185944ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tgt.shape:  torch.Size([32, 10, 512])\n",
+      "memory.shape:  torch.Size([32, 10, 512])\n",
+      "decoder_out.shape:  torch.Size([32, 10, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "multi_decoder_layer = nn.TransformerDecoder(decoder_layer=decoder_layer, num_layers=3)\n",
+    "decoder_out = multi_decoder_layer(tgt, memory)\n",
+    "\n",
+    "print(\"tgt.shape: \", tgt.shape)\n",
+    "print(\"memory.shape: \", memory.shape)\n",
+    "print(\"decoder_out.shape: \", decoder_out.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8397f18f-d31a-4472-bd28-1c61e3767e47",
+   "metadata": {},
+   "source": [
+    "## Transformer类\n",
+    "\n",
+    "[官方文档](https://pytorch.org/docs/stable/generated/torch.nn.Transformer.html#torch.nn.Transformer)\n",
+    "\n",
+    "`nn.Transformer(d_model=512, nhead=8, num_encoder_layers=6, num_decoder_layers=6, dim_feedforward=2048, dropout=0.1, activation=<function relu>, custom_encoder=None, custom_decoder=None, layer_norm_eps=1e-05, batch_first=False, norm_first=False, device=None, dtype=None)`\n",
+    "\n",
+    "+ 实例化参数\n",
+    "  + `d_model`，输入/输出的embedding dim，默认512\n",
+    "  + `nhead`\n",
+    "  + `num_encoder_layers`\n",
+    "  + `num_decoder_layers`\n",
+    "  + `dim_feedforward`\n",
+    "  + `dropout`\n",
+    "  + `activation`\n",
+    "  \n",
+    "+ 正向传播`forward(src, tgt, src_mask=None, tgt_mask=None, memory_mask=None, src_key_padding_mask=None, tgt_key_padding_mask=None, memory_key_padding_mask=None)`\n",
+    "  + `src`，shape=$(S,N,E)$\n",
+    "  + `tgt`，shape=$(T,N,E)$\n",
+    "  + `src_mask`，shape=$(S,S)$\n",
+    "  + `tgt_mask`，shape=$(T,T)$\n",
+    "  + `memory_mask`，shape=$(T,S)$\n",
+    "  + `src_key_padding_mask`，shape=$(N,S)$\n",
+    "  + `tgt_key_padding_mask`，shape=$(N,T)$\n",
+    "  + `memory_key_padding_mask`，shape=$(N,S)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c69b1bf-4413-47cf-9e80-0681bb1ccc63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -316,11 +449,13 @@
     "\n",
     "# Huggingface-Transformer\n",
     "\n",
+    "官方网站 [hugginface-transformer](https://huggingface.co/docs/transformers/index)\n",
+    "\n",
     "这里介绍huggingface编写的transformer包，它里面基于transformer结构，实现了各种模型，包括BERT, DistilBERT, GPT2 等等.\n",
     "\n",
     "transformer 包里最重要的三个子模块是：\n",
     "1. [Configuration](https://huggingface.co/transformers/main_classes/configuration.html)  \n",
-    "基础的类是 `PretrainedConfig`（好像也只有这一个类），用于 **导出/导入** 模型的配置。\n",
+    "基础的类是 `PretrainedConfig`（好像也只有这一个类），用于封装各个模型所需要的参数配置，同时也可以方便的 **导出/导入** 参数配置。\n",
     "\n",
     "2. [Tokenizer](https://huggingface.co/transformers/main_classes/tokenizer.html)  \n",
     "包含两个基础的类，用于将文本特征转换成transformer能处理的序列特征：\n",
@@ -330,8 +465,8 @@
     "\n",
     "3. [Models](https://huggingface.co/transformers/main_classes/model.html)  \n",
     "基础的类有如下三个，用于构建模型：\n",
-    "   + `PreTrainedModel`，pytorch的模型都继承了这个类，继承了 `torch.nn.Module` 类.\n",
-    "   + `TFPreTrainedModel`，Tensorflow2.0里的模型都继承了这个类，继承了 `tf.keras.Model` 类.\n",
+    "   + `PreTrainedModel`，pytorch实现的模型都继承了这个类，继承了 `torch.nn.Module` 类.\n",
+    "   + `TFPreTrainedModel`，Tensorflow2.0实现的模型都继承了这个类，继承了 `tf.keras.Model` 类.\n",
     "   + `FlaxPreTrainedModel`\n",
     "\n",
     "  \n",
@@ -356,8 +491,8 @@
     "\n",
     "transformer源码中，所有的模型结构都存放在 `src/transformers/models`文件夹下，每个模型对应于一个文件夹（比如BERT对应的就是`bert`文件夹），每个模型的文件夹内，主要有如下几个`.py`文件，其中的 `xxx` 是对应模型的名称：\n",
     "+ **`configuration_xxx.py`——KEY**，编写了该模型对应的`PretrainedConfig`子类，比如BERT就是`BertConfig`。\n",
-    "+ **`modeling_xxx.py`——KEY**，存放了pytorch编写的模型结构，要用到的模型类都放在这里面\n",
-    "+ `modeling_tf_xxx.py`，存放tensorflow编写的模型结构\n",
+    "+ **`modeling_xxx.py`——KEY**，存放了pytorch实现的模型结构，要用到的模型类都放在这里面\n",
+    "+ `modeling_tf_xxx.py`，存放tensorflow实现的模型结构\n",
     "+ `modeling_flax_xxx.py`\n",
     "+ **`tokenization_xxx.py`——KEY**，用于 分词的 实现类，比如BERT就是`BertTokenizer`类\n",
     "+ `tokenization_xxx_fast.py`，快速分词的实现类\n",
