--- a/ML-Action/11-transformer.ipynb
+++ b/ML-Action/11-transformer.ipynb
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.21.2\n",
+      "numpy:       1.21.5\n",
       "pandas:      1.3.4\n",
       "matplotlib:  3.5.1\n",
       "sklearn:     1.0.2\n",
@@ -501,53 +501,120 @@
   },
   {
    "cell_type": "markdown",
-   "id": "respective-distance",
+   "id": "85357b79-c5cc-4dbd-9bca-cc3adc2d4b27",
    "metadata": {},
    "source": [
     "----------------\n",
     "\n",
     "## Tokenizer\n",
     "\n",
+    "官方文档 [Tokenizer](https://huggingface.co/docs/transformers/v4.17.0/en/main_classes/tokenizer)\n",
+    "\n",
     "`Tokenizer`类是处理transformer结构输入的主要类，它用于将文本类的数据转换成transformer结构能够接受的序列数据.  \n",
     "\n",
-    "+ 所有的模型里，Tokenizer 都有两种实现：\n",
+    "所有的模型里，Tokenizer 都有两种实现：\n",
     "  1. 基于python代码的实现，对应于`PreTrainedTokenizer`类\n",
     "  2. 基于Rust Library的**快速**实现，对应于`PreTrainedTokenizerFast`类.\n",
     "\n",
     "\n",
-    "+ 上述两个类又都是基于`PreTrainedTokenizerBase`类，它们实现了如下的几个方法：\n",
+    "上述两个类又都是基于`PreTrainedTokenizerBase`类，该类实现了分词处理的主要方法，具体功能如下所示：\n",
     "  + 对文本进行分词，并将分词后的word映射到对应词典的id\n",
-    "  + 生成特殊的Tokens，比如mask等。\n",
+    "  + 生成特殊的Tokens，比如mask等。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8c53935-20c0-4855-b681-11d15478e1aa",
+   "metadata": {},
+   "source": [
+    "### 实例化Tokenizer\n",
+    "\n",
+    "`PreTrainedTokenizer`类虽然有实例化参数，但是通常会**使用`.from_pretrained()`方法从文件中读取配置，生成对应的Tokenizer对象**。  \n",
+    "\n",
+    "通常该对象会有如下属性：\n",
+    "+ `name_or_path`：读取的配置路径\n",
+    "+ `vocab_file_names`：字典文件名\n",
+    "+ `vocab_size`：单词字典的大小\n",
+    "+ `vocab`：单词字典，是一个OrderedDict\n",
+    "+ `ids_to_tokens`：id和token的映射字典，也是一个OrderedDict\n",
+    "+ `wordpiece_tokenizer`：底层使用的分词器\n",
+    "+ `max_model_input_sizes`\n",
+    "+ `max_len_single_sentence`\n",
+    "+ `model_max_length`\n",
+    "\n",
+    "此外，还有一些特殊token的字符和id，比如：\n",
+    "+ `pad_token`, `pad_token_id`\n",
+    "+ `sep_token`, `sep_token_id`\n",
+    "+ `cls_token`, `cls_token_id`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc095479-810f-4371-a605-a16c539892a2",
+   "metadata": {},
+   "source": [
+    "### 使用Tokenizer\n",
+    "\n",
+    "`PreTrainedTokenizer`类有如下常用的方法。\n",
     "\n",
     "\n",
-    "+ `Tokenizer`类的`__call__`方法接受的参数如下：\n",
-    "  + `text`，类型为`str`, `List[str]`， `List[List[str]]`\n",
-    "  + `text_pair`\n",
-    "  + `padding`，指定是否补全\n",
-    "  + `truncation`，指定是否截断\n",
-    "  + `max_length`\n",
-    "  + `stride`\n",
+    "\n",
+    "#### `__call__()`\n",
+    "\n",
+    "参数如下：\n",
+    "+ `text`，输入的句子或者句子序列，可接受的输入类型有：\n",
+    "  + `str`，单个句子\n",
+    "  + `List[str]`，多个句子。注意，如果这里是 list of word 的形式，那么需要设置`is_split_into_words=True`。\n",
+    "  + `List[List[str]]`，一个batch的句子\n",
+    "+ `text_pair`，输入的文本对，可接受的输入类型同`text`\n",
+    "+ `max_length`：设置可接受的最大句子长度\n",
+    "+ `padding`，补全策略，有如下几种输入：\n",
+    "  + `True` or `longest`，使用padding，此时按照最长的句子进行padding\n",
+    "  + `max_length`，按照初始化指定的`max_length`参数或者模型的`model_max_length`填充\n",
+    "  + `False` 或者 `do_not_pad`，不做padding，这是**默认值**。此时返回的数据中，一个batch中的各个句子会有不同的长度。\n",
+    "+ `truncation`，指定是否截断\n",
+    "+ `stride`\n",
+    "+ `return_tensors`：返回值的类型\n",
+    "  + `tf`：返回`tf.constant`对象\n",
+    "  + `pt`：返回`torch.Tensor`对象\n",
+    "  + `np`：返回`numpy.ndarray`对象\n",
     "\n",
     "\n",
-    "+ `Tokenizer.__call__()`方法返回的是一个` transformers.tokenization_utils_base.BatchEncoding`类对象，封装了返回的结果，它类似于一个dict，有如下重要的keys:\n",
-    "  + `input_ids`，分词后每个 token 对应 vocabulary 的 index —— 这个**作为输入模型的数据**.\n",
-    "  + `attention_mask`，表明填充的 token，填充位的 token 对应于 0.\n",
-    "  + `token_type_ids`，\n",
+    "`__call__()`方法返回的是一个`BatchEncoding`类对象，封装了返回的结果，它类似于一个dict，有如下重要的keys:\n",
+    "  + `input_ids`，分词后每个 token 对应 vocabulary 的 index —— 这个被**作为输入模型的数据**.\n",
+    "  + `attention_mask`，表明填充的 token 位置，**填充位的 token 对应于 0**.  \n",
+    "  因为一个batch中不同的句子长度不一样，短一些的句子会被padding成同样的长度，此时这些padding的位置需要被记录下来，用于告知模型这部分只是填充使用，不需要参与self-attention。\n",
+    "  + `token_type_ids`：通常用于问答对的句子中，它也是一个{0,1}掩码的形式，0表示属于问题的句子，1表示属于答案的句子\n",
+    "\n",
+    "\n",
+    "#### `tokenize()`\n",
+    "将文本转换成分词后的 tokens，返回的是 `List[str]`，表示的是文本对应 **分词后** 的 tokens .\n",
+    "\n",
     "  \n",
-    "  \n",
-    "+ `Tokenizer.encode()`方法：将文本转换成 sequences of ids.\n",
-    "  + 它接受的参数和 `__call__()` 方法一样\n",
-    "  + 返回的是 `List[int]`，表示的是文本分词后tokens 对应的 tokenized Ids.\n",
-    "\n",
-    "  \n",
-    "+ `Tokenizer.tokenize()`方法：将文本转换成分词后的 tokens，\n",
-    "  + 返回的是 `List[str]`，表示的是文本对应 **分词后** 的 tokens .\n",
+    "#### `encode()`\n",
+    "将文本转换成 sequences of ids.\n",
+    "+ 它接受的参数和 `__call__()` 方法一样\n",
+    "+ 返回的是 `List[int]`，表示的是文本分词后 tokens 对应的 tokenized ids.\n",
     "\n",
     "\n",
-    "+ 还有其他方法：\n",
-    "  + `convert_ids_to_tokens()`\n",
-    "  + `conver_tokens_to_ids()`\n",
-    "  + `conver_tokens_to_string()`\n"
+    "#### `decode()`\n",
+    "用于将分词后的 tokens id 转成分词后的文本\n",
+    "\n",
+    "\n",
+    "#### 其他方法\n",
+    "\n",
+    "+ `convert_ids_to_tokens()`\n",
+    "+ `conver_tokens_to_ids()`\n",
+    "+ `conver_tokens_to_string()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2348242-9b99-4261-af3d-0573fae5ad7b",
+   "metadata": {},
+   "source": [
+    "### 使用示例"
    ]
   },
   {
@@ -571,7 +638,29 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "packed-roommate",
+   "id": "cdc19405-01f0-4f7d-9f4e-da2cab7c115a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda3\\envs\\tensorflow1.15\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 导入 BERT tokenizer 的设置\n",
+    "from transformers import BertTokenizer\n",
+    "model_path = r\"BERT\\bert-pre-trained-models\\bert-base-uncased\"\n",
+    "tokenizer = BertTokenizer.from_pretrained(pretrained_model_name_or_path=model_path, local_files_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "eaf330e3-c290-487a-998c-0aa5283dc1ca",
    "metadata": {},
    "outputs": [
     {
@@ -583,21 +672,61 @@
     }
    ],
    "source": [
-    "# 导入 BERT tokenizer 的设置\n",
-    "from transformers import BertTokenizer\n",
-    "model_path = r\"BERT\\bert-pre-trained-models\\bert-base-uncased\"\n",
-    "tokenizer = BertTokenizer.from_pretrained(pretrained_model_name_or_path=model_path, local_files_only=True)\n",
-    "\n",
     "# 查看分词表大小\n",
     "print(\"tokenizer.vocab_size: \", tokenizer.vocab_size)\n",
-    "# 查看分词器所使用的的词表\n",
-    "vocab = tokenizer.get_added_vocab()"
+    "# 查看分词器所使用的的词表， 这个打印会很长\n",
+    "# tokenizer.vocab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "nonprofit-sleeping",
+   "execution_count": 10,
+   "id": "558bdd8f-dc26-470a-979e-67472fdf8bb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<transformers.models.bert.tokenization_bert.BasicTokenizer at 0x214ea688bc8>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.basic_tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c0b9056f-154d-46b1-aeea-81d0b9b00355",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[UNK]', '[SEP]', '[PAD]', '[CLS]', '[MASK]'] : [100, 102, 0, 101, 103]\n",
+      "[CLS] :  101\n",
+      "[MASK] :  103\n",
+      "[PAD] :  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tokenizer.all_special_tokens, ':', tokenizer.all_special_ids)\n",
+    "print(tokenizer.cls_token, ': ',tokenizer.cls_token_id)\n",
+    "print(tokenizer.mask_token, ': ', tokenizer.mask_token_id)\n",
+    "print(tokenizer.pad_token, ': ', tokenizer.pad_token_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fb467534-a310-4669-86ab-9c0484d106d0",
    "metadata": {},
    "outputs": [
     {
@@ -606,10 +735,7 @@
      "text": [
       "tokenized_words:  ['a', 'titan', 'rt', '##x', 'has', '24', '##gb', 'of', 'vr', '##am']\n",
       "tokenized_ids:  [101, 1037, 16537, 19387, 2595, 2038, 2484, 18259, 1997, 27830, 3286, 102]\n",
-      "decoded_tokens:  [CLS] a titan rtx has 24gb of vram [SEP]\n",
-      "\n",
-      "batch_encoding: \n",
-      " {'input_ids': [101, 1037, 16537, 19387, 2595, 2038, 2484, 18259, 1997, 27830, 3286, 102], 'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}\n"
+      "decoded_tokens:  [CLS] a titan rtx has 24gb of vram [SEP]\n"
      ]
     }
    ],
@@ -618,25 +744,44 @@
     "\n",
     "# 查看分词后的 tokens\n",
     "tokenized_words = tokenizer.tokenize(sentence)\n",
+    "print(\"tokenized_words: \", tokenized_words)\n",
     "\n",
     "# 查看分词后的 tokens id\n",
     "tokenized_ids = tokenizer.encode(sentence)\n",
+    "print(\"tokenized_ids: \", tokenized_ids)\n",
     "\n",
     "# 从 token id 映射回 token\n",
     "decoded_tokens = tokenizer.decode(tokenized_ids)\n",
-    "\n",
-    "# 直接调用 __call__() 方法，可以得到分词后的所有信息，一步到位\n",
-    "batch_encoding = tokenizer(sentence)\n",
-    "\n",
-    "print(\"tokenized_words: \", tokenized_words)\n",
-    "print(\"tokenized_ids: \", tokenized_ids)\n",
-    "print(\"decoded_tokens: \", decoded_tokens)\n",
-    "print(\"\\nbatch_encoding: \\n\", batch_encoding)"
+    "print(\"decoded_tokens: \", decoded_tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
+   "id": "9a063a11-2daf-4f94-a093-3e58b0e1ca34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_ids:  [101, 1037, 16537, 19387, 2595, 2038, 2484, 18259, 1997, 27830, 3286, 102]\n",
+      "attention_mask:  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "token_type_ids:  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 直接调用 __call__() 方法，可以得到分词后的所有信息，一步到位\n",
+    "batch_encoding = tokenizer(sentence)\n",
+    "print(\"input_ids: \", batch_encoding['input_ids'])\n",
+    "print(\"attention_mask: \", batch_encoding['attention_mask'])\n",
+    "print(\"token_type_ids: \", batch_encoding['token_type_ids'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "conscious-polls",
    "metadata": {},
    "outputs": [
@@ -645,14 +790,10 @@
      "output_type": "stream",
      "text": [
       "s1.length:  18 ; s2.length:  18\n",
-      "s1['input_ids']:\n",
-      " [101, 2023, 2003, 1037, 2460, 6251, 102, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "s1['attention_mask']:\n",
-      " [1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "s2['input_ids']:\n",
-      " [101, 2023, 2003, 1037, 2738, 2936, 5537, 1012, 2009, 2003, 2012, 2560, 2936, 2084, 1996, 5537, 1015, 102]\n",
-      "s2['attention_mask']:\n",
-      " [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+      "s1['input_ids']:  [101, 2023, 2003, 1037, 2460, 6251, 102, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "s2['input_ids']:  [101, 2023, 2003, 1037, 2738, 2936, 5537, 1012, 2009, 2003, 2012, 2560, 2936, 2084, 1996, 5537, 1015, 102]\n",
+      "s1['attention_mask']:  [1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "s2['attention_mask']:  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
@@ -664,10 +805,10 @@
     "batch_encoding = tokenizer([s1, s2], padding=True)\n",
     "\n",
     "print(\"s1.length: \", len(batch_encoding['input_ids'][0]), \"; s2.length: \", len(batch_encoding['input_ids'][1]))\n",
-    "print(\"s1['input_ids']:\\n\", batch_encoding['input_ids'][0])\n",
-    "print(\"s1['attention_mask']:\\n\", batch_encoding['attention_mask'][0])\n",
-    "print(\"s2['input_ids']:\\n\", batch_encoding['input_ids'][1])\n",
-    "print(\"s2['attention_mask']:\\n\", batch_encoding['attention_mask'][1])"
+    "print(\"s1['input_ids']: \", batch_encoding['input_ids'][0])\n",
+    "print(\"s2['input_ids']: \", batch_encoding['input_ids'][1])\n",
+    "print(\"s1['attention_mask']: \", batch_encoding['attention_mask'][0])\n",
+    "print(\"s2['attention_mask']: \", batch_encoding['attention_mask'][1])"
    ]
   },
   {
@@ -1350,9 +1491,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow(Python3.7.11)",
+   "display_name": "tensorflow1.15",
    "language": "python",
-   "name": "tensorflow"
+   "name": "tensorflow1.15"
   },
   "language_info": {
    "codemirror_mode": {
