--- a/DataVisualization/Python-Matplotlib.ipynb
+++ b/DataVisualization/Python-Matplotlib.ipynb
@@ -464,12 +464,16 @@
     "\n",
     "\n",
     "#第 3 种 ——— 推荐使用\n",
-    "fig1 = plt.figure()\n",
+    "# 可以进行图形大小的参数控制\n",
+    "fig1 = plt.figure(figsize=(15,8))\n",
     "new_plot = fig1.add_subplot(111)\n",
     "new_plot.plot(x, y)\n",
+    "# 需要手动获取 Figure 的 Axes\n",
+    "fig1.axes\n",
     "\n",
     "#第 4 种 —— 绘制多子图时推荐使用\n",
-    "fig, axes = plt.subplots(nrows=1, ncols=1)  # 同时返回了Figure对象和Axes对象组成的矩阵\n",
+    "# 同时返回了Figure对象和Axes对象组成的矩阵，并且可以设置图形大小的参数\n",
+    "fig, axes = plt.subplots(nrows=1, ncols=1, figsize=(15,8))\n",
     "axes[0].plot(x,y)\n",
     "\n",
     "\n",
@@ -511,7 +515,7 @@
     "\n",
     "+ 以下的一些函数需要注意：\n",
     "  + `plt.subplot()`：返回的是**单个子图**的`aexs`，所以是单数。——**可以不带参数**   \n",
-    "  注意，**它不返回`figure`对象**，它只是增加一个subplot，所以不能进行图形大小之类的设置。\n",
+    "  注意，**它不返回`figure`对象**，它只是增加一个subplot，所以**不能进行图形大小之类的设置**。\n",
     "  + `plt.subplots()`：返回**一个**`figure`和**一系列**的`subplots`的矩阵。  \n",
     "  它是创建`figure`时增加subplot，**可以通过`figsize=(15,8)`等参数控制`figure`的大小**。——**必须带参数**  \n",
     "  + `plt.axes()`：向当前的figure中添加一个`axes`，如果没有figure，先创建一个。——**可以不带参数**\n",
@@ -2139,7 +2143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2153,7 +2157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   },
   "toc-autonumbering": true
  },
