--- a/DataMining-Actions/05-svm.ipynb
+++ b/DataMining-Actions/05-svm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,12 +10,11 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.18.1\n",
-      "pandas:      1.0.1\n",
-      "matplotlib:  3.1.3\n",
-      "sklearn:     0.22.1\n",
-      "seaborn:     0.10.0\n",
-      "plotly:      4.14.1\n"
+      "numpy:       1.21.2\n",
+      "pandas:      1.3.3\n",
+      "matplotlib:  3.4.3\n",
+      "sklearn:     0.24.2\n",
+      "seaborn:     0.11.2\n"
      ]
     }
    ],
@@ -24,23 +23,36 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import plotly.express as px\n",
-    "from plotly import graph_objects as go\n",
     "\n",
     "import matplotlib\n",
-    "import plotly\n",
     "import sklearn\n",
-    "\n",
-    "from IPython.display import display\n",
-    "\n",
     "print(\"package版本信息：\")\n",
     "print(\"numpy:      \", np.__version__)\n",
     "print(\"pandas:     \", pd.__version__)\n",
     "print(\"matplotlib: \", matplotlib.__version__)\n",
     "print(\"sklearn:    \", sklearn.__version__)\n",
     "print(\"seaborn:    \", sns.__version__)\n",
-    "print(\"plotly:     \", plotly.__version__)"
+    "\n",
+    "from IPython.display import display"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 可选\n",
+    "import plotly\n",
+    "import plotly.express as px\n",
+    "from plotly import graph_objects as go\n",
+    "print(\"plotly:     \", plotly.__version__)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
