自定义转换器+pipeline超参数搜索

--- a/DataMining-Actions/00-pipeline-and-compose.ipynb
+++ b/DataMining-Actions/00-pipeline-and-compose.ipynb
@@ -11,10 +11,10 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.21.5\n",
-      "pandas:      1.4.3\n",
-      "matplotlib:  3.5.2\n",
-      "sklearn:     1.1.1\n",
+      "numpy:       1.22.3\n",
+      "pandas:      1.4.2\n",
+      "matplotlib:  3.5.1\n",
+      "sklearn:     1.0.2\n",
       "seaborn:     0.11.2\n"
      ]
     }
@@ -447,7 +447,7 @@
     "tags": []
    },
    "source": [
-    "# 封装自定义转换\n",
+    "# 封装自定义转换函数\n",
     "\n",
     "如果要实现自定义转换，则需要使用`sklearn.preprocess`包中的`FunctionTransformer`类，对自定义处理流程进行包装。\n",
     "\n",
@@ -472,7 +472,294 @@
    "id": "5061fac2-0d48-4466-945e-42e8814a328c",
    "metadata": {},
    "source": [
-    "# 实现自定义转换器"
+    "# 实现自定义转换器\n",
+    "\n",
+    "如果要实现自定义转换器，则需要实现一个继承`BaseEstimator`和`TransformerMixin`（均位于`sklearn.base`包）的类，然后重写其中的`fit()`和`transform()`方法。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a49d6e55-65ee-4b96-bee9-56ccfd7e2759",
+   "metadata": {},
+   "source": [
+    "下面是一个自定义转换器的例子，它可以同时对类别特征进行one-hot编码以及对计数特征进行分箱。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0c29b2a1-be7c-4732-84b9-892440a125e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.compose import ColumnTransformer, make_column_transformer\n",
+    "from sklearn.preprocessing import OneHotEncoder, KBinsDiscretizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d1a65e4a-edb2-4e12-be4d-a0e3cf710572",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FeaturesTransformer(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, onehot_encoder, onehot_cols, kbins_discretizer, kbin_cols, other_cols):\n",
+    "        # 只要是在形参中出现过的参数，名称必须和形参一样，因为 BaseEstimator 的 get_params() 方法会遍历函数签名中的形参，\n",
+    "        # 如果不一致，会导致 get_params() 方法报错\n",
+    "        self.onehot_encoder = onehot_encoder\n",
+    "        self.onehot_cols = onehot_cols\n",
+    "        self.kbins_discretizer = kbins_discretizer\n",
+    "        self.kbin_cols = kbin_cols\n",
+    "        self.other_cols = other_cols\n",
+    "        \n",
+    "        # 使用 ColumnTransformer 来对不同的列进行不同的特征处理\n",
+    "        transformers = [(self.onehot_encoder, onehot_cols), (self.kbins_discretizer, kbin_cols)]\n",
+    "        self.cols_transformer = make_column_transformer(*transformers, remainder='passthrough')\n",
+    "        self.onehot_cols_res = []\n",
+    "\n",
+    "    def make_onehot_cols_res(self):\n",
+    "        # 拼凑出one-hot编码之后的特征名称\n",
+    "        onehot = self.cols_transformer.named_transformers_['onehotencoder']\n",
+    "        onehot_drop_method = onehot.get_params()['drop']\n",
+    "        if onehot_drop_method == 'first':\n",
+    "            for idx, col in enumerate(onehot_cols):\n",
+    "                self.onehot_cols_res.extend([col + '_' + v for v in onehot.categories_[idx].tolist()[1:]])\n",
+    "        else:\n",
+    "            for idx, col in enumerate(onehot_cols):\n",
+    "                self.onehot_cols_res.extend([col + '_' + v for v in onehot.categories_[idx].tolist()])\n",
+    "\n",
+    "    def fit(self, X, y=None):\n",
+    "        self.cols_transformer.fit(X)\n",
+    "        self.make_onehot_cols_res()\n",
+    "        \n",
+    "        # 为了支持 fit_transform() 方法里执行的链式调用 fit(X).transform(X)，这里必须要返回 self\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        X_ = self.cols_transformer.transform(X)\n",
+    "        # return X_\n",
+    "        X_cols = self.onehot_cols_res + self.kbin_cols + self.other_cols\n",
+    "        X = pd.DataFrame(X_, columns=X_cols)\n",
+    "        # 分箱特征的初始值设为从1开始，而不是从0开始\n",
+    "        X[self.kbin_cols] = X[self.kbin_cols] + 1\n",
+    "        return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "db095fe7-6a2f-4b44-aa5e-592b1f909ce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>a</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>b</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>c</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  col1  col2  col3\n",
+       "0    a     1     6\n",
+       "1    b     5     7\n",
+       "2    a     2     8\n",
+       "3    b     3     9\n",
+       "4    c     4    10"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    'col1': ['a', 'b', 'a', 'b', 'c'],\n",
+    "    'col2': [1, 5, 2, 3, 4],\n",
+    "    'col3': [6, 7, 8, 9, 10]\n",
+    "})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c174e703-626a-408d-8421-c17e85e1a0c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FeaturesTransformer(kbin_cols=['col2'],\n",
+       "                    kbins_discretizer=KBinsDiscretizer(encode='ordinal',\n",
+       "                                                       strategy='uniform'),\n",
+       "                    onehot_cols=['col1'],\n",
+       "                    onehot_encoder=OneHotEncoder(drop='first', sparse=False),\n",
+       "                    other_cols=['col3'])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "onehot_cols = ['col1']\n",
+    "kbin_cols = ['col2']\n",
+    "other_cols = ['col3']\n",
+    "\n",
+    "onehot = OneHotEncoder(drop='first', sparse=False, handle_unknown='error')\n",
+    "kbin = KBinsDiscretizer(n_bins=5, encode='ordinal', strategy='uniform')\n",
+    "\n",
+    "features_transformer = FeaturesTransformer(onehot, onehot_cols, kbin, kbin_cols, other_cols)\n",
+    "features_transformer.fit(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "98e6c6d3-af32-4380-bf5e-f20b436fd94a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1_b</th>\n",
+       "      <th>col1_c</th>\n",
+       "      <th>col2</th>\n",
+       "      <th>col3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col1_b  col1_c  col2  col3\n",
+       "0     0.0     0.0   1.0   6.0\n",
+       "1     1.0     0.0   5.0   7.0\n",
+       "2     0.0     0.0   2.0   8.0\n",
+       "3     1.0     0.0   3.0   9.0\n",
+       "4     0.0     1.0   4.0  10.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_transformer.transform(df)"
    ]
   },
   {
@@ -573,7 +860,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DataAnalysis(Python3.8.13)",
+   "display_name": "data-analysis(Python3.8.12)",
    "language": "python",
    "name": "data-analysis"
   },
@@ -587,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
